--- a/app/src/main/res/layout/activity_new_evento.xml
+++ b/app/src/main/res/layout/activity_new_evento.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/fotoEvento"
-        android:layout_width="350dp"
-        android:layout_height="143dp"
+        android:layout_width="341dp"
+        android:layout_height="88dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -27,6 +27,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="Evento:"
+        android:textSize="20dp"
+        android:textColor="#333333"
         app:layout_constraintLeft_toLeftOf="@+id/fotoEvento"
         app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
 
@@ -47,6 +49,8 @@
         android:layout_width="117dp"
         android:layout_height="40dp"
         android:text="Descripción:"
+        android:textSize="20dp"
+        android:textColor="#333333"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/nombre"
         android:layout_marginLeft="0dp"
@@ -70,6 +74,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="Precio:"
+        android:textSize="20dp"
+        android:textColor="#333333"
         app:layout_constraintLeft_toLeftOf="@+id/descripcionEvento"
         app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
@@ -84,18 +90,29 @@
         app:layout_constraintLeft_toRightOf="@+id/precioEvento"
         app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
+
+    <TextView
+        android:id="@+id/dateo"
+        android:layout_width="117dp"
+        android:layout_height="40dp"
+        android:text="Fecha:"
+        android:textSize="20dp"
+        android:textColor="#333333"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/precioEvento"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/precioEvento"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/precioEvento" />
     <EditText
         android:id="@+id/dateEvento"
         android:layout_width="157dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/precioEvento"
-        app:layout_constraintRight_toLeftOf="@+id/timeEvento"
-        android:layout_marginRight="8dp" />
+        tools:layout_editor_absoluteX="65dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/dateo" />
 
     <EditText
         android:id="@+id/timeEvento"
@@ -103,10 +120,12 @@
         android:layout_height="41dp"
         android:ems="10"
         android:inputType="time"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/precio"
+        app:layout_constraintLeft_toRightOf="@+id/dateEvento"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/dateEvento"
+        android:layout_marginTop="0dp" />
 
     <Button
         android:id="@+id/addEvento"
@@ -117,6 +136,7 @@
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:onClick="addEvento"/>
+        android:onClick="addEvento"
+        android:background="#4267B2"/>
 
 </android.support.constraint.ConstraintLayout>
