--- a/app/src/main/res/layout/fragment_detalle_evento.xml
+++ b/app/src/main/res/layout/fragment_detalle_evento.xml
@@ -3,64 +3,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.ammacias.tectium.Fragments.DetalleEventoFragment">
-
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context="com.ammacias.tectium.Fragments.DetalleEventoFragment"
+    android:background="#FFFF99">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="368dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/cardView">
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/precio"
-                android:inputType="number"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:text="19"
-                app:layout_constraintLeft_toRightOf="@+id/img_precio"
-                app:layout_constraintTop_toTopOf="@+id/img_precio"
-                android:layout_marginStart="8dp" />
+                <EditText
+                    android:id="@+id/precio"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:inputType="number"
+                    android:text="19"
+                    android:textColor="#333"
+                    android:textSize="15dp"
+                    app:layout_constraintLeft_toRightOf="@+id/img_precio"
+                    app:layout_constraintTop_toTopOf="@+id/img_precio" />
 
-            <EditText
-                android:id="@+id/fecha"
-                android:inputType="datetime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:text="07/07/2017 08:00"
-                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
-                app:layout_constraintTop_toTopOf="@+id/img_fecha"
-                android:layout_marginStart="8dp" />
+                <EditText
+                    android:id="@+id/fecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:inputType="datetime"
+                    android:text="07/07/2017 08:00"
+                    android:textColor="#333"
+                    android:textSize="15dp"
+                    app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                    app:layout_constraintTop_toTopOf="@+id/img_fecha" />
 
-            <!--<ImageView
+                <!--<ImageView
                 android:id="@+id/compartir"
                 android:layout_width="34dp"
                 android:layout_height="25dp"
@@ -75,7 +66,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp" />-->
 
-            <!--<ImageView
+                <!--<ImageView
                 android:id="@+id/fav"
                 android:layout_width="34dp"
                 android:layout_height="25dp"
@@ -86,77 +77,85 @@
                 app:srcCompat="@drawable/heart"
                 android:layout_marginStart="52dp" />-->
 
-            <ImageView
-                android:id="@+id/img_precio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="169dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
-                app:layout_constraintTop_toBottomOf="@+id/descripcion"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                android:layout_marginStart="169dp" />
+                <ImageView
+                    android:id="@+id/img_precio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="169dp"
+                    android:layout_marginStart="169dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                    app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                    app:srcCompat="@mipmap/ic_launcher_round" />
 
-            <ImageView
-                android:id="@+id/img_fecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="34dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/descripcion"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                android:layout_marginStart="34dp" />
+                <ImageView
+                    android:id="@+id/img_fecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="34dp"
+                    android:layout_marginStart="34dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                    app:srcCompat="@mipmap/ic_launcher_round"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="24dp" />
 
-            <EditText
-                android:id="@+id/descripcion"
-                android:layout_width="343dp"
-                android:layout_height="57dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="22dp"
-                android:text="Este evento va a ser la releche!! Anímate y ven"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fotoEvento"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp" />
+                <EditText
+                    android:id="@+id/descripcion"
+                    android:layout_width="343dp"
+                    android:layout_height="57dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="22dp"
+                    android:text="Este evento va a ser la releche!! Anímate y ven"
+                    android:textColor="#333"
+                    android:textSize="15dp"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
 
-            <EditText
-                android:id="@+id/sitio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="33dp"
-                android:layout_marginTop="20dp"
-                android:text="Sevilla, Sevilla"
-                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
-                app:layout_constraintTop_toBottomOf="@+id/nombre"
-                android:layout_marginStart="33dp" />
+                <EditText
+                    android:id="@+id/sitio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="33dp"
+                    android:layout_marginStart="33dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Sevilla, Sevilla"
+                    android:textColor="#333"
+                    android:textSize="15dp"
+                    app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                    app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
-            <EditText
-                android:id="@+id/nombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="35dp"
-                android:layout_marginTop="8dp"
-                android:text="Tablao Flamenco"
-                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="35dp" />
+                <EditText
+                    android:id="@+id/nombre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Tablao Flamenco"
+                    android:textColor="#333"
+                    android:textSize="15dp"
+                    app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/fotoEvento"
-                android:layout_width="112dp"
-                android:layout_height="103dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-                android:layout_marginStart="8dp" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+                <ImageView
+                    android:id="@+id/fotoEvento"
+                    android:layout_width="112dp"
+                    android:layout_height="103dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
 
         <LinearLayout android:orientation="vertical"
             android:layout_height="300dp"
@@ -216,6 +215,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:textColor="#fff"
+                            android:background="#4267B2"
                             android:text="@string/add" />
                     </LinearLayout>
 
@@ -230,13 +231,15 @@
             android:layout_width="88dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="#4267B2"
+            android:onClick="editarOwnEvent"
             android:text="@string/edit"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="#fff"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:onClick="editarOwnEvent"/>
-</android.support.constraint.ConstraintLayout>
+            android:layout_marginBottom="8dp" />
+    </android.support.constraint.ConstraintLayout>
     <!-- <LinearLayout android:orientation="vertical"
             android:layout_height="71dp"
             android:layout_width="0dp"
