--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -26,15 +26,17 @@
 
             <TextView
                 android:id="@+id/precio"
+                android:inputType="number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:text="10€"
+                android:text="19"
                 android:textColor="#000000"
-                android:textSize="17dp"
+                android:textSize="14dp"
                 app:layout_constraintLeft_toRightOf="@+id/img_precio"
-                app:layout_constraintTop_toTopOf="@+id/img_precio" />
+                app:layout_constraintTop_toTopOf="@+id/img_precio"
+                android:layout_marginStart="8dp" />
 
             <TextView
                 android:id="@+id/fecha"
@@ -44,7 +46,7 @@
                 android:layout_marginTop="8dp"
                 android:text="09/09/2017 08:00"
                 android:textColor="#000000"
-                android:textSize="17dp"
+                android:textSize="14dp"
                 app:layout_constraintLeft_toRightOf="@+id/img_fecha"
                 app:layout_constraintTop_toTopOf="@+id/img_fecha" />
 
@@ -85,7 +87,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="34dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
