--- a/app/src/main/res/layout/fragment_new_evento.xml
+++ b/app/src/main/res/layout/fragment_new_evento.xml
@@ -7,13 +7,14 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFF99">
 
 
         <ImageView
             android:id="@+id/fotoEvento"
-            android:layout_width="350dp"
-            android:layout_height="143dp"
+            android:layout_width="341dp"
+            android:layout_height="88dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
@@ -29,6 +30,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="Evento:"
+            android:textSize="20dp"
+            android:textColor="#333333"
             app:layout_constraintLeft_toLeftOf="@+id/fotoEvento"
             app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
 
@@ -49,6 +52,8 @@
             android:layout_width="117dp"
             android:layout_height="40dp"
             android:text="Descripción:"
+            android:textSize="20dp"
+            android:textColor="#333333"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/nombre"
             android:layout_marginLeft="0dp"
@@ -72,6 +77,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="Precio:"
+            android:textSize="20dp"
+            android:textColor="#333333"
             app:layout_constraintLeft_toLeftOf="@+id/descripcionEvento"
             app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
@@ -86,18 +93,30 @@
             app:layout_constraintLeft_toRightOf="@+id/precioEvento"
             app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
+
+        <TextView
+            android:id="@+id/dateo"
+            android:layout_width="117dp"
+            android:layout_height="40dp"
+            android:text="Fecha:"
+            android:textSize="20dp"
+            android:textColor="#333333"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/precioEvento"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/precioEvento"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/precioEvento" />
         <EditText
             android:id="@+id/dateEvento"
             android:layout_width="157dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/precioEvento"
-            app:layout_constraintRight_toLeftOf="@+id/timeEvento"
-            android:layout_marginRight="8dp" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/dateo"
+            android:layout_marginLeft="24dp"
+            app:layout_constraintLeft_toLeftOf="@+id/dateo" />
 
         <EditText
             android:id="@+id/timeEvento"
@@ -105,11 +124,12 @@
             android:layout_height="41dp"
             android:ems="10"
             android:inputType="time"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/precio"
+            app:layout_constraintLeft_toRightOf="@+id/dateEvento"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
-
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/dateEvento"
+            android:layout_marginTop="0dp" />
         <Button
             android:id="@+id/addEvento"
             android:layout_width="wrap_content"
@@ -118,7 +138,9 @@
             android:layout_marginRight="8dp"
             android:text="@string/add"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="#4267B2"
+            android:textColor="#fff"/>
 
     </android.support.constraint.ConstraintLayout>
 
